# lkj

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  config.example.json  go.mod  polybar-module.ini  pyproject.toml  requirements.md
cmd/lkj/: detach_unix.go  detach_windows.go  main.go  main_test.go
docs/: frontend.md  macos.md  windows.md
internal/audio/: audio.go  audio_test.go  session.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/desktop/: backend.go  backend_darwin.go  backend_test.go  backend_unsupported.go  backend_unsupported_test.go  backend_windows.go
internal/output/: clipboard.go  clipboard_test.go  file.go  http.go  notification.go  output.go  paste.go  paste_linux.go  paste_linux_test.go  paste_other.go  stdout.go  type.go  type_linux.go  type_other.go  type_test.go
internal/pipeline/: pipeline.go  pipeline_test.go
internal/stt/: parakeet.go  parakeet_test.go  stt.go  whispercpp.go  whispercpp_test.go
scripts/: bootstrap.sh  install.sh  lkj-polybar.sh  parakeet_transcribe.py  warmup.sh
share/applications/: lkj-toggle.desktop
src/lkj/: app.py  asr.py  audio.py  cli.py  config.py  doctor.py  gui.py  notify.py  output.py
tests/: test_app.py  test_asr.py  test_audio.py  test_cli.py  test_config.py  test_doctor.py  test_output.py
